--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@angular/router": "^6.1.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
-    "net": "^1.0.2",
     "jquery": "^3.3.1",
+    "net": "^1.0.2",
+    "ngx-cookie-service": "^1.0.10",
     "rxjs": "^6.0.0",
     "sockjs-client": "^1.1.5",
     "stompjs": "^2.3.3",
